# get-haskell

./: .gitignore  README.md
unit-1/lesson-10/: cup.hs
unit-1/lesson-2/: q-2-2.hs  q-2-3.hs
unit-1/lesson-3/: q-3-2.hs  qc-3-2.hs  qc-3-3.hs
unit-1/lesson-4/: q-4-1.hs
unit-1/lesson-5/: q-5-1.hs  q-5-2.hs  qc-5-1.hs  qc-5-4.hs
unit-1/lesson-6/: q-6-1.hs  q-6-2.hs  q-6-3.hs
unit-1/lesson-7/: euclid-gcd.hs  q-7-2.hs  take.hs
unit-1/lesson-8/: cycle.hs  fast-fib.hs  reverse.hs  take.hs
unit-1/lesson-9/: 1.hs  2.hs  3.hs  map.hs  remove.hs
unit-2/11/: 1.hs  2.hs  3.hs  halve.hs
unit-2/12/: 2.hs
unit-2/13/: inc.hs
unit-3/: time-series.hs
unit-4/21/: 1.hs  2.hs
unit-4/22/: qc-1.hs  qc-2.hs  sum_lazy.hs
unit-4/23/: 1.hs  2.hs
unit-4/24/: 1.hs  2.hs
unit-4/25/: 1.hs
unit-5/27/: 1.hs  2.hs
unit-5/28/: add-maybe.hs
unit-5/29/: 1.hs  2.hs  3.hs
unit-5/30/: 1.hs  2.hs  3.hs
unit-5/31/: 1.hs  2.hs  3.hs  echo.hs  max-pair.hs
unit-5/32/: 1.hs  2.hs
unit-6/primes/: ChangeLog.md  primes.cabal
unit-6/primes/app/: Main.hs
unit-6/primes/src/: Primes.hs
unit-6/primes/test/: Spec.hs
unit-7/38/: 1.hs  2.hs
unit-7/39/http-lesson/: CHANGELOG.md  data.json  http-lesson.cabal
unit-7/39/http-lesson/app/: Main.hs
unit-7/40/json-lesson/: CHANGELOG.md  json-lesson.cabal
unit-7/40/json-lesson/app/: Main.hs
unit-7/41/db-lesson/: build_db.sql  db-lesson.cabal  tools.db
unit-7/41/db-lesson/app/: Main.hs
unit-7/42/: 1.hs  2.hs  bubble.hs
