cabal-version:      2.4
name:               http-lesson
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Vyacheslav Poplavsky
maintainer:         avalsoff@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable http-lesson
    hs-source-dirs:   app
    main-is:          Main.hs


    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , bytestring
                    , http-conduit
                    , case-insensitive
                    , http-types
    default-language: Haskell2010
    default-extensions: OverloadedStrings
